--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
+  position: relative;
   text-align: center;
+  min-height: 100vh;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -13,8 +17,8 @@
   }
 }
 
+
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
