--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  background: linear-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
+  background: radial-gradient(circle at 50% 0%, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
   
   padding-top: 30px;
   overflow: hidden;
