--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,14 +1,12 @@
 .footer {
   padding-bottom: 10px;
   padding-right: 40px;
-  text-align: right;
-  position: fixed;
   bottom: 0;
   left: 0;
 }
 footer > button {
   position: fixed;
-  bottom: 40px;  /* Distance from the bottom of the page */
+  bottom: 40px; /* Distance from the bottom of the page */
   right: 40px;
   border: 3px solid hsl(217, 16%, 45%);
   color: white;
@@ -24,13 +22,24 @@ footer > button {
   font-size: 1rem;
   transition: background-color 0.2s, color 0.2s;
 }
+
+footer > button.invite {
+  left: 40px;
+}
+
 @media (max-width: 780px) {
   footer > button {
     position: fixed;
     bottom: 20px; /* Adjust if needed */
-    left: 50%;
+    right: 25%;
     transform: translateX(-50%);
     right: auto; /* Reset right positioning */
+  }
+  footer > button.invite {
+    left: 25% ;
+  }
+  footer > button.rules {
+    transform: translateX(50%);
   }
 }
 
@@ -46,7 +55,7 @@ footer > button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,7 +70,7 @@ footer > button:hover {
   text-align: center;
 }
 
-.popup-content img{
+.popup-content img {
   width: 100%;
 }
 
